force-app/main/default/objects/CLQ_Rules_Inspected__c/CLQ_Rules_Inspected__c.object-meta.xml
<CustomObject>
    <label>Rules Inspected</label>
    <nameField>
        <displayFormat>RI#-{000000}</displayFormat>
        <label>Rules Inspected No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules Inspected</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>