force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_Allegation_Description__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Allegation_Description__c</fullName>
    <label>Allegation Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>