force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_Alleged_Rule__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Alleged_Rule__c</fullName>
    <formula>IF( ISBLANK(CLQ_Alleged_Rule_Violation__c),false,true )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alleged Rule?</label>
    <type>Checkbox</type>
</CustomField>