force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_Alleged_Rule_Decision__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Alleged_Rule_Decision__c</fullName>
    <formula>IF( NOT(ISBLANK(CLQ_Alleged_Rule_Violation__c)),IF(TEXT(CLQ_Result__c)==&quot;Non-Compliant&quot;,&quot;Substantiated&quot;,&quot;Unsubstantiated&quot;) ,&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alleged Rule Decision</label>
    <type>Text</type>
</CustomField>