force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_Decision__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsubstantiated</fullName>
            </value>
            <value>
                <fullName>Substantiated</fullName>
            </value>
            <value>
                <fullName>Unable to be Determined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>