force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_Description_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Description_Comments__c</fullName>
    <label>Description / Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>