force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_hasSeriousRiskFinding__c.field-meta.xml
<CustomField>
    <fullName>CLQ_hasSeriousRiskFinding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to check if the rule is having any serious finding or not</description>
    <label>hasSeriousRiskFinding</label>
    <type>Checkbox</type>
</CustomField>