force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_Inspection_No__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Inspection_No__c</fullName>
    <label>Inspection No</label>
    <referenceTo>CLQ_Inspection__c</referenceTo>
    <relationshipLabel>Rules Inspected</relationshipLabel>
    <relationshipName>Rules_Inspected</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>