force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_Investigation_Method__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Investigation_Method__c</fullName>
    <label>Investigation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>