force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_isFocused__c.field-meta.xml
<CustomField>
    <fullName>CLQ_isFocused__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to track if the rule derived from tool having scope as &quot;Focused&quot;</description>
    <label>isFocused?</label>
    <type>Checkbox</type>
</CustomField>