force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_Result__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Non-Compliant</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Verified</fullName>
                <default>true</default>
                <label>Not Verified</label>
            </value>
            <value>
                <fullName>Previously Verified</fullName>
            </value>
            <value>
                <fullName>Substantiated</fullName>
            </value>
            <value>
                <fullName>Unsubstantiated</fullName>
            </value>
            <value>
                <fullName>Unable to be determined</fullName>
            </value>
            <value>
                <fullName>Not Discussed</fullName>
            </value>
            <value>
                <fullName>Discussed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>