force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_Risk_Points__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Risk_Points__c</fullName>
    <label>Risk Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>