force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_Room_Space__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Room_Space__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room/Space</label>
    <referenceTo>CLQ_Room_Space__c</referenceTo>
    <relationshipLabel>Rules Inspected</relationshipLabel>
    <relationshipName>Rules_Inspected</relationshipName>
    <type>Lookup</type>
</CustomField>