force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_Rule_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rule_Short_Name__c</fullName>
    <formula>CLQ_Domain_Rule__r.CLQ_Rule_Short_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Short Name</label>
    <type>Text</type>
</CustomField>