force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/CLQ_SRNC__c.field-meta.xml
<CustomField>
    <fullName>CLQ_SRNC__c</fullName>
    <label>SRNC</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>