force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/Desk_Review_Result__c.field-meta.xml
<CustomField>
    <fullName>Desk_Review_Result__c</fullName>
    <description>Picklist value to filter standard findings based on the conditions mentioned in the picklist field</description>
    <label>Desk Review Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Not Met</fullName>
            </value>
            <value>
                <fullName>Deferal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>