force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/Original_Rules_Inspected__c.field-meta.xml
<CustomField>
    <fullName>Original_Rules_Inspected__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rules Inspected</label>
    <referenceTo>CLQ_Rules_Inspected__c</referenceTo>
    <relationshipLabel>Rules Inspected</relationshipLabel>
    <relationshipName>Rules_Inspected_del</relationshipName>
    <type>Lookup</type>
</CustomField>