force-app/main/default/objects/CLQ_Rules_Inspected__c/fields/ProgramTransaction__c.field-meta.xml
<CustomField>
    <fullName>ProgramTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Transaction</label>
    <referenceTo>CLQ_Program_Transaction__c</referenceTo>
    <relationshipLabel>Rules Inspected</relationshipLabel>
    <relationshipName>Rules_Inspected</relationshipName>
    <type>Lookup</type>
</CustomField>